<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vaultpool.customer.presentation.ui.main.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tickets"
        android:name="com.vaultpool.customer.presentation.ui.main.cart.CartFragment"
        android:label="@string/nav_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
            android:id="@+id/nav_bookings"
            android:name="com.vaultpool.customer.presentation.ui.main.bookings.BookingsFragment"
            android:label="@string/nav_bookings"
            tools:layout="@layout/fragment_bookings" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.vaultpool.customer.presentation.ui.main.profile.ProfileFragment"
        android:label="@string/nav_profile" />
</navigation>
